@@ -1,6 +1,7 @@
 2013-05-13: Ver. 0.1-5
   * Add high-level functions "pmclust" and "pkmeans".
   * Add man page and vignettes.
+  * Add PiLow to generate.MixSim.
 
 2013-03-25: Ver. 0.1-4
   * Add dmat_* functions/methods to fully utilize pbdR capability, only the
